[package]
authors = ["Kornel <kornel@geekhood.net>"]
name = "mss_saliency"
include = ["src/**/*", "Cargo.toml", "README.md"]
description = "Detection of visually salient image regions using Maximum Symmetric Surround algorithm"
homepage = "https://infoscience.epfl.ch/record/151989"
documentation = "https://docs.rs/mss_saliency"
repository = "https://github.com/kornelski/mss_saliency"
readme = "README.md"
keywords = ["saliency", "entropy", "segmentation"]
license = "MIT"
categories = ["multimedia::images"]
version = "1.1.1"
edition = "2021"

[dependencies]
imgref = "1.10"
rgb = { version = "0.8.47", default-features = false }
summed-area = "1.0"

[dev-dependencies]
lodepng = "3.10"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[badges]
maintenance = { status = "passively-maintained" }
